# PAML

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  Makefile  P-1234567-Test Task.parameters.json  README.md  RELEASE_PROCESS.md  __init__.py  arvados_platform.py  base_platform.py  omics_platform.py  platform.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests_in_docker.sh  sevenbridges_platform.py
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yaml  pylint.yml  release.yml  test.yaml
docs/: wes_platform.md
examples/: wes_platform_example.py
scripts/: prepare_changelog.py  release.sh  release_notes.py
src/: arvados_platform.py  base_platform.py  sevenbridges_platform.py
src/cwl_platform/: __init__.py  arvados_platform.py  base_platform.py  ga4ghwes_platform.py  ngs360_platform.py  omics_platform.py  platform_config.py  sevenbridges_platform.py  wes_platform.py
tests/: test_arvados.py  test_arvados_platform.py  test_copy_folder.py  test_find_or_create_path.py  test_get_arvados_task_output_of_submitted_task.py  test_get_files.py  test_get_files_fullpath.py  test_ngs360-ga4gh_platform.py  test_ngs360_ga4gh_platform.py  test_omics_platform.py  test_print_get_files.py  test_sevenbridges.py  test_sevenbridges_platform.py  test_upload_file_integration.py  test_wes_platform.py
