[project]
name = "cwl_platform"
version = "0.3.3"
authors = [
  { name="Ryan Golhar", email="ngsbioinformatics@gmail.com" }
]
description = "Multi-Platform Launcher Template"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/NGS360/PAML"
Issues = "https://github.com/NGS360/PAML/issues"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

